parrafos y estilos de fondo

--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Principal</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse est
+      optio nemo, quod officiis ad ipsa ea nostrum obcaecati?
+    </p>
+  </body>
 </html>
