Update index.html, lorem_añadido

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. In esse est
-      optio nemo, quod officiis ad ipsa ea nostrum obcaecati?
+      optio nemo, quod officiis ad ipsa ea nostrum obcaecati? lorem_añadido
     </p>
   </body>
 </html>
